--- a/docroot/profiles/custom/cgov_site/themes/custom/ncids_trans/front-end/src/legacy/styles/_general.scss
+++ b/docroot/profiles/custom/cgov_site/themes/custom/ncids_trans/front-end/src/legacy/styles/_general.scss
@@ -456,20 +456,21 @@ div.previous-next-links {
   }
 }
 
-/* fix for Chrome problem with rendering sup tags */
+/* copying sub and sup styling from USWDS for use as nci classes */
 .sup,
-sup {
-  font-size: 80%;
-  position: relative;
-  bottom: 0.6em;
-  vertical-align: text-top; //[WCMSFEQ-980] Added vertical-align:text-top to sup styling to remove white line appearing at bottom of pages in IE
+.sub {
+	font-size: 75%;
+	line-height: 0;
+	position: relative;
+	vertical-align: baseline;
 }
-.sub,
-sub {
-  font-size: 80%;
-  position: relative;
-  bottom: -0.2em;
+.sub {
+    bottom: -.25em
 }
+.sup {
+    top: -.5em
+}
+
 /* BEGIN columns by css instead of tables */
 .two-columns,
 .three-columns,
